add tailwind CDN

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,13 +8,14 @@ $black: #000000;
 $white: #ffffff;
 $rostrbg: #e9e9e9;
 
-@import "tailwindcss/base";
-
-@import "tailwindcss/components";
-
-@import "tailwindcss/utilities";
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
+
+.bg-primary { background-color: $primary; } 
+.bg-secondary { background-color: $secondary;}
+.bg-alternate { background-color: $alternate;} 
+
 
 html {font-size: 100%; } /*16px*/
 
