--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,6 +15,7 @@ $rostrbg: #e9e9e9;
 .bg-primary { background-color: $primary; } 
 .bg-secondary { background-color: $secondary;}
 .bg-alternate { background-color: $alternate;} 
+.bg-rostrbg { background-color: $rostrbg;} 
 
 
 html {font-size: 100%; } /*16px*/
@@ -101,6 +102,7 @@ a.button {
 
 ul {
   padding-left: 1.25em;
+  @apply list-disc;
 }
 
 nav a {
@@ -137,34 +139,13 @@ nav a {
   }
 }
 
-.row {
-  &.primary {
-    background-color: $primary;
-  }
-  &.alternate {
-    background-color: $alternate;
-  }
-  &.secondary {
-    background-color: $secondary;
-  } 
-  &.rostrbg {
-    background-color: $rostrbg;
-  }
-  &.inverse {
-    background-color: $black;
-    color: $white;
-    a {
-      color: $white;
-      &:after {
-        fill: $white;
-      }
-    }
-  }
-}
 
-img.circle {
-  border-radius: 100%;
-}
+.shadow {
+    -webkit-box-shadow: 1rem 1rem 0 0 rgba( 0,0,0,.3 );  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+    -moz-box-shadow:    1rem 1rem 0 0 rgba( 0,0,0,.3 );  /* Firefox 3.5 - 3.6 */
+    box-shadow:  1rem 1rem 0 0 rgba( 0,0,0,.3 );
+  
+  }
 
 
 .greet {
@@ -177,91 +158,6 @@ img.circle {
   line-height: 70px;
   margin-left: auto;
   margin-right: auto;
-}
-
-.row {
-  .shadow {
-    img,.login-form {
-      -webkit-box-shadow: 1rem 1rem 0 0 rgba( 0,0,0,.3 );  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-      -moz-box-shadow:    1rem 1rem 0 0 rgba( 0,0,0,.3 );  /* Firefox 3.5 - 3.6 */
-      box-shadow:  1rem 1rem 0 0 rgba( 0,0,0,.3 );
-    
-    }
-
-  } 
-  .sub-heading {
-    .copy {
-      text-align: center;
-      padding: 1.75rem;
-    }
-    h2, p {
-      margin: 0;
-    }
-  }
-  .img-left, .img-right, .img-center {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    padding: 0 1.75rem;
-    .image {
-      max-width: 100%;
-      img {
-        max-width: 100%;
-        display: block;
-        margin: 1.75rem auto;
-      }
-      &.end {
-        img {
-          margin-bottom: 0;
-        }
-      }
-      &.start {
-        img {
-          margin-top: 0;
-        }
-      }
-    }
-    .copy {
-      small {
-        text-transform: uppercase;
-      }
-      h2 {
-        margin-top: 0;
-      }
-      &>:first-child {
-        margin-top: 1.75rem;
-      }
-      &>:last-child {
-        margin-bottom: 1.75rem;
-      }
-      
-    }
-  }
-}
-
-.row .img-right {
-  .copy {
-    
-}
-}
-
-.row .img-center {
-  text-align: center;
-  padding: 0 1.75rem;
-  .image {
-    img {
-      max-width: 100%;
-    }
-    &:first-child {
-      img {
-      }
-    }
-  }
-  .copy {
-    h2 {
-      margin-top: 0;
-    }
-  }
 }
 
 .post {
@@ -309,118 +205,6 @@ img.circle {
     margin: 0;
   }
 
-  #header_wrap {
-    h1 {
-      line-height: 3rem;
-      margin-left: 0;
-    }
-    header {
-      display: flex;      
-    }
-    nav {
-      flex-grow: 2;
-      button {
-        display: none;
-      }
-      ul {
-        display: flex;
-        justify-content: flex-end;
-        li {
-          line-height: 3rem;
-          margin: 0 0 0 3rem;
-        }
-      }
-
-    } 
-  }
-  .row {
-    .sub-heading {
-      .copy {
-        max-width: 45rem;
-        margin: 0 auto;  
-        padding: 3rem 0;
-      }
-    }
-    .img-left, .img-right, .img-center {
-      flex-direction: row;
-      max-width: 45rem;
-      margin: 0 auto;  
-      padding: 0;
-      align-items: center;
-      .image {
-        max-width: 22.5rem;
-        &.start {
-          align-self: flex-start;
-        }
-        &.end {
-          align-self: flex-end;
-        }
-        img {
-          display: block;
-          max-width: none;
-          margin: 6rem 0;
-          image-rendering: -webkit-optimize-contrast;
-        }
-        &.resize img {
-          max-width: 100%;
-        }
-      }
-      .copy {
-        padding: 6rem 0;
-        margin: 0 3rem 0 0;
-
-
-      }
-    }
-  }
-
-  .row .img-left {
-    .copy {
-      order: 2;
-      margin: 0 0 0 3rem;
-    }
-  }
-
-  .row .img-right {
-    .image {
-      order: 2;
-      margin: 0 0 0 3rem;
-    }
-  }
-
-  .row .img-center {
-    flex-direction: column;
-    text-align: center;
-    .image {
-      margin: 0;
-      max-width: 100%;
-      img {
-        max-width: 100%;
-      }
-      &:first-child {
-        img {
-          margin-bottom: 1.75rem;
-        }
-      }
-      &:last-child {
-        img {
-          margin-top: 1.75rem;
-        }
-      }
-    }
-    .copy {
-      padding: 0;
-      margin: 0;
-      max-width: 30rem;
-      &:last-child {
-        margin-bottom: 6rem;
-      }
-      &:first-child {
-        margin-top: 6rem;
-      }
-    }
-  }
-
   .post {
     & > * {
       max-width: 45rem;
@@ -439,17 +223,6 @@ img.circle {
 }
 
 
-.contact {
-  display: flex;
-  justify-content: center;
-  a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 0 1rem;
-  }
-}
 
 
 
