--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,7 @@ $alternate: #efefef;
 $black: #000000;
 $white: #ffffff;
 $rostrbg: #e9e9e9;
+$bebetter: #ff6600;
 
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
@@ -16,6 +17,7 @@ $rostrbg: #e9e9e9;
 .bg-secondary { background-color: $secondary;}
 .bg-alternate { background-color: $alternate;} 
 .bg-rostrbg { background-color: $rostrbg;} 
+.bg-bebetter { background-color: $bebetter;} 
 
 
 html {font-size: 100%; } /*16px*/
